# ExecTunnel

./: .dockerignore  .env.manager.example  .gitignore  .gitmessage  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  config.toml.example  config.yaml.example  docker-compose.manager.yml  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  docker-publish.yml  publish.yml
bench/: _schema.py
deploy/kubernetes/: configmap.yaml  deployment.yaml  kustomization.yaml  namespace.yaml  secret.yaml  service.yaml  serviceaccount.yaml
docs/: architecture.md  measurement.md  protocol.md  proxy.md  session.md  transport.md
docs/ARCHITECTURE/: README.md  protocol.md  proxy.md  session.md  transport.md
docs/adr/: 0000-adr-conventions.md  0001-proof-of-concept-architecture.md
docs/observability/: api.md  arch.md
docs/protocol/: api.md  arch.md
docs/proxy/: api.md  arch.md
docs/session/: api.md  arch.md
docs/transport/: api.md  arch.md
exectunnel/: __init__.py  _stream.py  _version.py  cli.py  connection.py  defaults.py  exceptions.py  helpers.py  socks5.py  tunnel.py  utils.py
exectunnel/bench/: __init__.py  _report.py
exectunnel/cli/: __init__.py  __main__.py  _app.py  _config.py  _context.py  _exit_codes.py  _health.py  _kubectl.py  _remote_config.py  _session_runner.py  _spinner.py  _theme.py  metrics.py  runner.py  supervisor.py
exectunnel/cli/_commands/: list.py  run.py  validate.py  version.py
exectunnel/cli/_display/: __init__.py  _dashboard.py  _formatting.py  _logging.py  _panel.py  _spinner.py  _theme.py
exectunnel/cli/_supervisor/: __init__.py  ipc.py  process_health.py  supervisor.py  worker.py
exectunnel/cli/commands/: __init__.py  config.py  connect.py  manager.py  status.py  tunnel.py  ws.py
exectunnel/cli/dashboards/: __init__.py  manager.py  tunnel.py
exectunnel/cli/ui/: __init__.py  _spinner.py  _theme.py
exectunnel/cli/utils/: __init__.py  _env.py  _log_level.py  _parsing.py
exectunnel/config/: __init__.py  _file.py  _global.py  _loader.py  _mixin.py  _overrides.py  _tunnel.py  _types.py  defaults.py  env.py  exclusions.py  settings.py
exectunnel/core/: config.py  consts.py  models.py
exectunnel/observability/: __init__.py  exporters.py  logging.py  metrics.py  reporter.py  tracing.py  utils.py
exectunnel/payload/: __init__.py  agent.py
exectunnel/protocol/: __init__.py  codecs.py  constants.py  encoders.py  enums.py  frames.py  ids.py  parser.py  types.py
exectunnel/proxy/: __init__.py  _codec.py  _constants.py  _errors.py  _handshake.py  _io.py  _udp_protocol.py  _wire.py  config.py  dns_forwarder.py  relay.py  request.py  server.py  tcp_relay.py  udp_relay.py
exectunnel/session/: __init__.py  _bootstrap.py  _config.py  _constants.py  _dispatcher.py  _dns.py  _handlers.py  _io.py  _lru.py  _payload.py  _receiver.py  _recv_loop.py  _routing.py  _sender.py  _state.py  _types.py  _udp.py  _udp_socket.py  _ws_sender.py  helpers.py  session.py  utils.py
exectunnel/transport/: __init__.py  _constants.py  _errors.py  _types.py  _validation.py  _waiting.py  connection.py  dns_forwarder.py  models.py  session.py  tcp.py  udp.py  udp_flow.py
scripts/: bench_compare.py  bench_exectunnel.py  bench_layered.py  bench_tunnel.py  bootstrap_docs.sh
scripts/probe/: probe_common.py  probe_k8s_exec.py  probe_net_metrics.py  probe_ws_endpoint.py  probe_ws_input.py
tests/: README.md  __init__.py  conftest.py  readiness.py  test_config.py  test_helpers.py  test_observability.py  test_protocol.py  test_relay.py  test_socks5.py  test_tunnel_hardening.py
tests/_helpers/: __init__.py  ids.py  network.py  streams.py  ws.py
tests/integration/: __init__.py  harness.py  test_agent_stress.py  test_agent_subprocess.py  test_benchmark.py  test_scenarios.py  test_wire_loop_inmemory.py
tests/proxy/: conftest.py  test_config.py  test_constants.py  test_server.py
tests/unit/: test_defaults.py  test_exceptions.py  test_new_exceptions.py
tests/unit/cli/: test_remote_config_and_supervisor.py
tests/unit/observability/: __init__.py  test_utils.py
tests/unit/protocol/: __init__.py  test_codecs.py  test_codecs_property.py  test_enums.py  test_frames.py  test_ids.py  test_parser.py  test_types.py
tests/unit/proxy/: conftest.py  test_config.py  test_io.py  test_server.py  test_tcp_relay.py  test_udp_relay.py  test_wire.py
tests/unit/session/: __init__.py  test_constants.py  test_dispatcher_udp.py  test_lru.py  test_routing.py  test_sender.py  test_state.py  test_strip_ansi.py
tests/unit/transport/: _helpers.py  conftest.py  test_errors.py  test_init.py  test_ordering_repro.py  test_tcp.py  test_types.py  test_types_dataclasses.py  test_udp.py  test_validation.py  test_waiting.py
tools/pod_echo/: Makefile  README.md  go.mod  main.go
