[project]
name = "exectunnel"
description = "SOCKS5 proxy tunnel over WebSocket into Kubernetes pods"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "khodaparastan", email = "mohammad@khodaparastan.com" }]
keywords = ["exec", "kubernetes", "proxy", "socks5", "tunnel", "websocket"]
classifiers = [
    "Development Status :: 3 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: Proxy Servers",
    "Topic :: System :: Networking",
    "Typing :: Typed",
]
dependencies = [
    "aiohttp-socks (>=0.11.0,<0.12.0)",
    "aiohttp (>=3.13.5,<4.0.0)",
    "colorama (>=0.4.6,<1.0.0)",
    "contextvars (>=2.4,<3.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "orjson (>=3.11.8,<4.0.0)",
    "psutil (>=6.0.0,<8.0.0)",
    "pydantic-settings (>=2.14.0,<3.0.0)",
    "pydantic (>=2.13.3,<3.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "rich (>=15.0.0,<16.0.0)",
    "structlog (>=25.5.0,<26.0.0)",
    "tomli (>=2.4.1,<3.0.0)",
    "typer (>=0.24.2,<0.25.0)",
    "websockets (>=16.0)",
    "pytest (>=9.0.3,<10.0.0)",
]
dynamic = ["version"]

[project.urls]
Changelog = "https://github.com/khodaparastan/exectunnel/blob/main/CHANGELOG.md"
Documentation = "https://github.com/khodaparastan/exectunnel#readme"
Homepage = "https://github.com/khodaparastan/exectunnel"
Issues = "https://github.com/khodaparastan/exectunnel/issues"
Repository = "https://github.com/khodaparastan/exectunnel"

[project.scripts]
et = "exectunnel.cli:app"
exectunnel = "exectunnel.cli:app"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
version = "1.3.0"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.poetry.group.dev.dependencies]
aiohttp = "^3.13.5"
aiohttp-socks = "^0.11.0"
mypy = "^1.19.1"
orjson = "^3.11.8"
pyrefly = "^0.62.0"
pytest = "^9.0.2"
pytest-asyncio = ">=0.24"
ruff = "^0.15.12"
ty = "^0.0.32"

[tool.poetry.group.docs.dependencies]
griffe = "^2.0.2"
mkdocs = "^1.6.1"
mkdocs-material = "^9.7.6"
mkdocs-mermaid-plugin = "^0.1.1"
mkdocstrings = { extras = ["python"], version = "^1.0.4" }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
log_cli = true
log_cli_level = "WARNING"
markers = [
    "integration: integration-style tests",
    "agent: black-box payload agent subprocess tests",
    "slow: slower or stress-oriented tests",
]

[tool.ruff]
preview = true
fix = true
show-fixes = true
src = ["exectunnel"]
exclude = [".venv", "venv", "scripts"]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "A",
    "C4",
    "COM",
    "DTZ",
    "E",
    "ERA",
    "EXE",
    "FLY",
    "FURB",
    "I",
    "ICN",
    "ISC",
    "LOG",
    "PERF",
    "PIE",
    "PL",
    "PT",
    "RET",
    "RSE",
    "S",
    "SIM",
    "SLOT",
    "T100",
    "T10",
    "T20",
    "UP",
    "W",
    "PYI006",
    "PYI062",
    "PYI063",
    "PYI066",
    "YTT",
]
ignore = [
    "COM812",
    "E501",
    "D107",
    "S101",
    "G004",
    "ISC001",
    "ISC003",
    "A002",
    "N802",
    "PLR09",
    "TRY301",
    "G201",
    "PLW0603",
    "TRY400",
    "TRY401",
    "N811",
    "S311",
    "N801",
    "TRY003",
    "TRY300",
    "UP040",
]
explicit-preview-rules = true
extend-fixable = ["ALL"]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pylint]
max-nested-blocks = 15

[tool.mypy]
strict = true
explicit_package_bases = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
no_implicit_reexport = true
disallow_untyped_defs = true
disallow_untyped_decorators = false
ignore_missing_imports = true
enable_error_code = ["possibly-undefined"]
follow_imports = "normal"
python_version = "3.12"
warn_return_any = false
warn_unused_configs = true

[tool.basedpyright]
include = ["exectunnel"]
exclude = ["tests"]
defineConstant = { DEBUG = true }
reportMissingImports = "error"
reportMissingTypeStubs = false
reportImplicitStringConcatenation = false
reportAny = false
pythonVersion = "3.12"
pythonPlatform = "Darwin"
